--- a/Snapchat/Base.lproj/Main.storyboard
+++ b/Snapchat/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="kjR-EB-3QP" kind="show" id="2bb-ld-QO3"/>
+                                    <segue destination="kjR-EB-3QP" kind="show" identifier="segueCriarConta" id="2bb-ld-QO3"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFP-Us-MQA">
@@ -42,7 +42,7 @@
                                 <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Entrar"/>
                                 <connections>
-                                    <segue destination="J41-iz-nlq" kind="show" id="aVr-hp-eHV"/>
+                                    <segue destination="J41-iz-nlq" kind="show" identifier="segueLogar" id="aVr-hp-eHV"/>
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zRe-gK-2wk">
@@ -79,7 +79,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Snapchat" id="zjA-Zo-uO3"/>
                     <connections>
-                        <segue destination="0e2-Wf-Tpn" kind="presentation" identifier="segueLoginAutomatico" id="YJx-H9-Mm7"/>
+                        <segue destination="xdT-QH-O57" kind="presentation" identifier="segueLoginAutomatico" id="YJx-H9-Mm7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -175,17 +175,17 @@
                         <outlet property="confirmarSenhaField" destination="Asp-tP-SPO" id="E2f-d0-DUa"/>
                         <outlet property="emailField" destination="QHj-Qf-Hfl" id="P0h-AQ-WWf"/>
                         <outlet property="senhaField" destination="mP6-A1-aTt" id="zVG-8Y-VP2"/>
-                        <segue destination="0e2-Wf-Tpn" kind="presentation" identifier="segueCadastroLogin" id="VDv-9o-75a"/>
+                        <segue destination="xdT-QH-O57" kind="presentation" identifier="segueCadastroLogin" animates="NO" id="VDv-9o-75a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MqE-qT-0vN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1348" y="641.82908545727139"/>
         </scene>
-        <!--Tela Inicial View Controller-->
+        <!--Snaps-->
         <scene sceneID="Uax-t9-qen">
             <objects>
-                <viewController storyboardIdentifier="TelaInicial" useStoryboardIdentifierAsRestorationIdentifier="YES" id="0e2-Wf-Tpn" customClass="TelaInicialViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" id="0e2-Wf-Tpn" customClass="SnapsViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7FZ-xf-ZGB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -201,10 +201,90 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="f8T-cK-L7a"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Snaps" id="c7M-tE-QWo">
+                        <barButtonItem key="leftBarButtonItem" title="Sair" id="Cxd-iZ-W1Z">
+                            <connections>
+                                <action selector="sair:" destination="0e2-Wf-Tpn" id="6es-O9-zoq"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Sh8-8a-MzE">
+                            <connections>
+                                <segue destination="im3-Me-mgz" kind="show" id="bPH-cT-Mtl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4FM-ZA-zeM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2680.8000000000002" y="214.54272863568218"/>
+            <point key="canvasLocation" x="3746" y="214"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="ESl-yJ-wNI">
+            <objects>
+                <viewController id="im3-Me-mgz" customClass="FotoViewController" customModule="Snapchat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Skw-fG-gpO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="padrao" translatesAutoresizingMaskIntoConstraints="NO" id="6w8-QP-exy">
+                                <rect key="frame" x="67" y="88" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="Wan-Hc-abt"/>
+                                    <constraint firstAttribute="height" constant="128" id="mGT-bW-apD"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JOc-au-GFM">
+                                <rect key="frame" x="67" y="251" width="240" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="2ZJ-oj-nMC"/>
+                                    <constraint firstAttribute="height" constant="30" id="fnb-NI-xOQ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v1c-13-DcB">
+                                <rect key="frame" x="142" y="313" width="90" height="40"/>
+                                <color key="backgroundColor" red="0.55294117649999996" green="0.36862745099999999" blue="0.74901960779999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="9me-uw-4kB"/>
+                                    <constraint firstAttribute="height" constant="40" id="XVT-dh-qPs"/>
+                                </constraints>
+                                <state key="normal" title="Próximo">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="proximoPasso:" destination="im3-Me-mgz" eventType="touchUpInside" id="UIz-uM-sbR"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="JOc-au-GFM" firstAttribute="centerX" secondItem="Skw-fG-gpO" secondAttribute="centerX" id="ERc-sR-Dzs"/>
+                            <constraint firstItem="v1c-13-DcB" firstAttribute="centerX" secondItem="Skw-fG-gpO" secondAttribute="centerX" id="H3l-mY-fcE"/>
+                            <constraint firstItem="v1c-13-DcB" firstAttribute="top" secondItem="JOc-au-GFM" secondAttribute="bottom" constant="32" id="bOa-IL-gsM"/>
+                            <constraint firstItem="6w8-QP-exy" firstAttribute="centerX" secondItem="Skw-fG-gpO" secondAttribute="centerX" id="buC-rd-lpp"/>
+                            <constraint firstItem="JOc-au-GFM" firstAttribute="top" secondItem="6w8-QP-exy" secondAttribute="bottom" constant="35" id="t9A-7f-ugF"/>
+                            <constraint firstItem="6w8-QP-exy" firstAttribute="top" secondItem="dpr-PB-4aE" secondAttribute="top" constant="24" id="yO1-cY-txx"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dpr-PB-4aE"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="9Kr-4g-Dvt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="ZPj-32-gDN">
+                            <connections>
+                                <action selector="selecionarFoto:" destination="im3-Me-mgz" id="v5H-vi-hMc"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="descricao" destination="JOc-au-GFM" id="GtD-dc-U8k"/>
+                        <outlet property="imagem" destination="6w8-QP-exy" id="6wz-DX-mkj"/>
+                        <outlet property="proximoButton" destination="v1c-13-DcB" id="gbe-CC-U7I"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="o5B-HB-J2G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4984.8000000000002" y="213.64317841079463"/>
         </scene>
         <!--Entrar-->
         <scene sceneID="qSG-Qv-qny">
@@ -226,13 +306,13 @@
                                 <color key="textColor" red="0.66422420739999999" green="0.66424006219999998" blue="0.66423153879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite um email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7BX-Fe-D8k">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="bruno.guitarpro@gmail.com" borderStyle="roundedRect" placeholder="Digite um email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7BX-Fe-D8k">
                                 <rect key="frame" x="16" y="93" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress" keyboardAppearance="alert" textContentType="email"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Digite uma senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tnu-DT-iqA">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="aioriaeshaka123" borderStyle="roundedRect" placeholder="Digite uma senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tnu-DT-iqA">
                                 <rect key="frame" x="16" y="175" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -276,7 +356,7 @@
                     <connections>
                         <outlet property="emailField" destination="7BX-Fe-D8k" id="tMR-sM-531"/>
                         <outlet property="senhaField" destination="Tnu-DT-iqA" id="8Qp-rm-LVg"/>
-                        <segue destination="0e2-Wf-Tpn" kind="presentation" id="oAY-dI-vzv"/>
+                        <segue destination="xdT-QH-O57" kind="presentation" identifier="segueLogin" id="oAY-dI-vzv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nIA-MF-mPG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -301,11 +381,30 @@
             </objects>
             <point key="canvasLocation" x="-529" y="115"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ruc-ek-DU2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="flipHorizontal" id="xdT-QH-O57" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eDE-yX-qqL">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="0e2-Wf-Tpn" kind="relationship" relationship="rootViewController" id="7r9-Hq-99k"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N9u-Sm-lkS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2680" y="214.09295352323841"/>
+        </scene>
     </scenes>
     <resources>
         <image name="logo" width="200" height="200"/>
+        <image name="padrao" width="500" height="446"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="YJx-H9-Mm7"/>
+        <segue reference="oAY-dI-vzv"/>
     </inferredMetricsTieBreakers>
 </document>
